--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
+python==3.7.7
+numpy==1.18.1
+pandas==1.0.3
+pydicom==1.4.2
 flask==1.1.2
+plotly==4.7.1
+h5py==2.10.0
+matplotlib==3.1.3
+scikit-learn==0.22.1
+tensorflow==2.2.0
+scipy==1.4.1
