--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-python==3.7
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: osx-64
+flask==1.1.2
+gunicorn==20.0.4
+matplotlib==3.1.3
 numpy==1.18.1
 pandas==1.0.3
-pydicom==1.4.2
-flask==1.1.2
-plotly==4.7.1
-h5py==2.10.0
-matplotlib==3.1.3
-scikit-learn==0.22.1
+pip==20.0.2
+plotly==4.8.1
+pydicom==2.0.0
 tensorflow==2.2.0
-scipy==1.4.1
